--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "scripts": {
     "analyze": "ANALYZE=true pnpm run build",
     "dev": "next dev --turbopack",
-    "build": "next build && tsx scripts/generate-meta.ts",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "lint:fix": "next lint --fix",
+    "lint:fix": "eslint . --fix",
+    "type-check": "tsc --noEmit",
+    "check": "pnpm run lint && pnpm run type-check",
     "predev": "tsx scripts/sync-blog.ts",
     "prebuild": "tsx scripts/sync-blog.ts",
     "prepare": "husky"
@@ -28,7 +30,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
-    "@t3-oss/env-nextjs": "^0.13.8",
+    "@t3-oss/env-nextjs": "^0.13.10",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
@@ -41,7 +43,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.13",
+    "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -49,7 +51,7 @@
     "@commitlint/config-conventional": "^20.2.0",
     "@content-collections/core": "^0.12.0",
     "@content-collections/mdx": "^0.2.2",
-    "@content-collections/next": "^0.2.9",
+    "@content-collections/next": "^0.2.10",
     "@eslint/js": "^9.39.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@next/bundle-analyzer": "^16.0.10",
@@ -61,8 +63,8 @@
     "@types/pngjs": "^6.0.5",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.49.0",
-    "@typescript-eslint/parser": "^8.49.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
@@ -95,7 +97,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.49.0",
+    "typescript-eslint": "^8.50.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   },
